--- a/application/admin/view/branch/city_list.html
+++ b/application/admin/view/branch/city_list.html
@@ -33,7 +33,7 @@
          */
         tableIns = table.render({
             elem: '#demo',
-            url: '/admin/branch/city_list_ajax?region_id='+region_id //数据接口
+            url: '/admin/branch/city_list?region_id='+region_id //数据接口
             ,page: true //开启分页
             ,limit: 20,
             id: 'test',
