--- a/application/admin/view/branch/region_list.html
+++ b/application/admin/view/branch/region_list.html
@@ -36,7 +36,7 @@
             elem: '#demo',
             toolbar: '#toolbarDemo',
             defaultToolbar: [],
-            url: '/admin/branch/region_list_ajax' //数据接口
+            url: '/admin/branch/region' //数据接口
             ,page: true //开启分页
             ,limit: 20,
             id: 'test',
