--- a/application/admin/view/shop/shop_add.html
+++ b/application/admin/view/shop/shop_add.html
@@ -202,7 +202,7 @@
         });
         form.on('submit(toSubmit)', function (data) {
             var params = data.field;
-			$.post('/admin/shop/addShop', params, function (data) {
+			$.post('/admin/shop/shopAdd', params, function (data) {
 				var res = data.data;
 				if (data.code == 200) {
 					layer.msg('添加成功', {
