--- a/application/admin/view/branch/edit.html
+++ b/application/admin/view/branch/edit.html
@@ -53,7 +53,8 @@
                 <div class="layui-input-block">
                   <input type="checkbox" name="status" lay-skin="switch" lay-text="开启|关闭" value="1" {if $data.status == 1}checked{/if} >
                 </div>
-              </div>
+			  </div>
+			  <input type="hidden" name="id" value="{$data.id}" />
 			<div class="layui-form-item">
 				<div class="layui-input-block">
 					<button class="layui-btn" lay-submit lay-filter="toSubmit">提交</button>
@@ -132,9 +133,10 @@ layui.use(['form','layer'], function(){
 				province: data.field.province,
 				city: data.field.city,
 				county: data.field.county,
-				status: data.field.status
+				status: data.field.status,
+				id:data.field.id
 			};
-		$.post('/admin/branch/editBranch', params, function(data){
+		$.post('/admin/branch/branchEdit', params, function(data){
             var res = data.data;
             if(data.code == 200){
                 layer.msg('修改成功',{
