--- a/application/admin/view/member/index.html
+++ b/application/admin/view/member/index.html
@@ -30,7 +30,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/member/index_ajax' //数据接口
+            , url: '/admin/member/index' //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
