--- a/application/admin/view/shop/index.html
+++ b/application/admin/view/shop/index.html
@@ -37,7 +37,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/shop/index_ajax' //数据接口
+            , url: '/admin/shop/index' //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
@@ -58,7 +58,7 @@
                     , {
                         field: 'handle', title: '操作',width: '20%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家商品\',\'/admin/shop/goodsLis?id=' + d.id + '\',1000,500);">商品</button>'+
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家商品\',\'/admin/shop_goods/goodsLis?id=' + d.id + '\',1000,500);">商品</button>'+
                             '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'绑定\/解绑用户\',\'/admin/shop/userAdd?id=' + d.id + '\',800,500);">用户</button>'+
                             '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商家\',\'/admin/shop/shopEdit?id=' + d.id + '\',800,480);">编辑</button>'+
                             '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
