--- a/application/admin/view/shop/shop_edit.html
+++ b/application/admin/view/shop/shop_edit.html
@@ -205,7 +205,7 @@
         });
         form.on('submit(toSubmit)', function (data) {
             var params = data.field;
-			$.post('/admin/shop/editShop', params, function (data) {
+			$.post('/admin/shop/shopEdit', params, function (data) {
 				var res = data.data;
 				if (data.code == 200) {
 					layer.msg('修改成功', {
