--- a/application/admin/view/shop_goods/goods_add.html
+++ b/application/admin/view/shop_goods/goods_add.html
@@ -18,7 +18,7 @@
         }
     </style>
     <div class="x-body">
-        <form action="addGoods" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
+        <form action="" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
             <div class="layui-form-item">
                 <label class="layui-form-label">商品名称</label>
                 <div class="layui-input-block">
