--- a/application/admin/view/shop_goods_img/img_add.html
+++ b/application/admin/view/shop_goods_img/img_add.html
@@ -50,7 +50,7 @@
                 return false;
             }
             var params = data.field;
-            $.post('/admin/shop/addImg', params, function(data){
+            $.post('/admin/shop_goods_img/imgAdd', params, function(data){
                 var res = data.data;
                 if(data.code == 200){
                     layer.msg('添加成功',{
