--- a/application/admin/view/check/authenticate.html
+++ b/application/admin/view/check/authenticate.html
@@ -11,7 +11,7 @@
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索认证','/admin/authenticate/search?type='+type,800,480)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索预约','/admin/check/searchA?type='+type,800,480)">
                     <i class="layui-icon layui-icon-search"></i>搜索
                 </button>
             </div>
@@ -21,7 +21,7 @@
 {include file="public/foot"}
 <script>
     var tableIns;
-    var type = {$type};
+    
     layui.use(['laydate', 'form', 'table'], function () {
         var table = layui.table, laydate = layui.laydate, form = layui.form;
         /**
@@ -31,7 +31,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/authenticate/indexList?type='+type //数据接口
+            , url: '/admin/check/authenticate' //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
@@ -39,25 +39,28 @@
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
                     , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
-                    , { field: 'uname', title: '用户姓名', width: '10%' }
-                    , { field: 'mobile', title: '手机号', width: '10%' }
-                    , { field: 'city', title: '所属城市', width: '15%' }
-                    , { field: 'credentials_code', title: '证件号', width: '10%' }
-                    , { field: 'credentials_img', title: '证件图片', width: '10%' ,
-                            templet:function(d){
+                    , { field: 'uname', title: '申请人', width: '8%' }
+                    , { field: 'type', title: '认证类型', width: '8%' }
+                    , { field: 'region', title: '所属城市', width: '12%', }
+                    , { field: 'create_time', title: '申请时间', width: '12%', }
+                    , { field: 'credentials_code', title: '证件号', width: '15%', }
+                    , { field: 'credentials_img', title: '证件图片', width: '15%', 
+                        templet:function(d){
                                 if(d.credentials_img){
-                                    var img = '<img src="__public__'+d.credentials_img+'" class="logo-img" />';
+                                    var credentials_img = '<img src="__public__'+d.credentials_img+'" class="logo-img" />';
                                 }else{
-                                    var img = '暂无图片';
+                                    var credentials_img = '暂无图片';
                                 }
-                                return img;
+                                return credentials_img;
                             }
                         }
-                    , { field: 'is_pass', title: '是否通过', width: '5%' }
-                    , { field: 'create_time', title: '申请时间', width: '10%' }
-                    , { field: 'checked_time', title: '审核时间', width: '10%' }
-                    , { field: 'reason', title: '备注', width: '10%' }
-                    
+                    , {
+                        field: 'handle', title: '操作',
+                        templet: function (d) {
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/editA?id=' + d.id + '\',800,480);">审核</button>' ;
+                            return handle;
+                        }
+                    }
                 ]
             ]
         });
