--- a/application/admin/view/member/index.html
+++ b/application/admin/view/member/index.html
@@ -8,12 +8,12 @@
                 <!-- <button class="layui-btn layui-btn-sm" lay-event="getCheckData">获取选中行数据</button>
                 <button class="layui-btn layui-btn-sm" lay-event="getCheckLength">获取选中数目</button>
                 <button class="layui-btn layui-btn-sm" lay-event="isAll">验证是否全选</button> -->
-                <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
+                <!-- <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
-                </button>
-                <!-- <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加会员','add.html',800,500)">
-                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加会员
                 </button> -->
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索会员','search.html',800,500)">
+                    <i class="layui-icon layui-icon-search"></i>搜索
+                </button>
             </div>
         </script>
     </div>
@@ -30,6 +30,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
+            , height: 'full-60'
             , url: '/admin/member/index' //数据接口
             , page: true //开启分页
             , limit: 20
@@ -37,9 +38,10 @@
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
-                    , { field: 'uname', title: '会员名称' }
-                    , { field: 'type', title: '会员类型',width:'10%',
+                    , { field: 'id', title: 'ID', width: '6%', fixed: 'left' }
+                    , { field: 'uname', title: '账号', width: '8%', }
+                    , { field: 'realname', title: '姓名', width: '10%' }
+                    , { field: 'type', title: '类型',width:'8%',
                         templet:function(d){
                             var type = '会员';
                             if(d.type==1){
@@ -58,8 +60,11 @@
                             return type;
                         }
                     }
-                    , { field: 'mobile', title: '联系电话',width:'15%' }
-                    , { field: 'area', title: '所属地区',width:'15%',
+                    , { field: 'mobile', title: '电话',width:'10%' }
+                    , { field: 'rank_name', title: '等级', width: '8%'}
+                    , { field: 'point', title: '积分',width:'6%' }
+                    , { field: 'subor', title: '会员数', width: '6%' }
+                    , { field: 'area', title: '地区',width:'10%',
                         templet:function(d){
                             if(d.county){
                                 var area = d.province_name+'-'+d.city_name+'-'+d.county_name;
@@ -69,12 +74,30 @@
                             return area;
                         } 
                     }
-                    , { field: 'create_time', title: '创建时间', width: '15%', }
+                    , { field: 'source', title: '来源', width: '10%',
+                        templet:function(d){
+                            var source = 'PC端注册';
+                            if(d.source == '1'){
+                                source = '识别二维码';
+                            }else if(d.source == '2'){
+                                source = '自主关注';
+                            }else if(d.source == '3'){
+                                source = '公众号菜单栏';
+                            }else if(d.source == '4'){
+                                source = '分享链接';
+                            }
+                            return source;
+                        }
+                    }
+                    , { field: 'lastlogin', title: '最后登录',width:'10%' }
+                    , { field: 'loginip', title: '最后ip', width: '10%' }
+                    , { field: 'create_time', title: '注册时间', width: '10%' }
                     , {
-                        field: 'handle', title: '操作', width: '15%',
+                        field: 'handle', title: '操作', width: '10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑会员\',\'/admin/member/edit?id=' + d.id + '\',800,480);">编辑</button>' +
-                                '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                            var handle = /* '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑会员\',\'/admin/member/edit?id=' + d.id + '\',800,480);">编辑</button>' + */
+                                '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="x_admin_show(\'积分充值\',\'/admin/member/recharge?id=' + d.id + '\',480,480);">充值</button>' +
+                                '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'积分日志\',\'/admin/member/point?id=' + d.id + '\',900,500);">积分</button>';
                             return handle;
                         }
                     }
